<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
>
	<CheckBoxPreference
		android:key="location_data"
		android:defaultValue="true"
		android:title="@string/settings_location"
		android:summaryOn="@string/settings_location_on"
		android:summaryOff="@string/settings_location_off"
	/>
	<ListPreference
		android:key="data_format"
		android:title="@string/settings_data_format_title"
		android:summary="@string/settings_data_format_summary"
		android:entries="@array/data_formats"
		android:entryValues="@array/data_format_values"
		android:defaultValue="0"
	/>
	<PreferenceCategory
		android:orderingFromXml="true"
		android:title="@string/settings_backups_title"
		android:key="backups"
	>
		<!-- TODO: make this auto-generated -->
		<PreferenceScreen>
	        <intent
	            android:action="android.intent.ACTION_VIEW"
	            android:targetPackage="com.evancharlton.mileage"
	            android:targetClass="com.evancharlton.mileage.TransportSettingsActivity"
	        />
    	</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/settings_notification_title"
		android:key="notifications"
	>
		<EditTextPreference
			android:key="interval_notification_sound"
			android:defaultValue="true"
			android:title="@string/settings_interval_sound"
		/>
		<CheckBoxPreference
			android:key="interval_notification_led"
			android:defaultValue="true"
			android:title="@string/settings_interval_led"
			android:summaryOn="@string/settings_interval_led_on"
			android:summaryOff="@string/settings_interval_led_off"
		/>
		<CheckBoxPreference
			android:key="interval_notification_vibrate"
			android:defaultValue="true"
			android:title="@string/settings_interval_vibrate"
			android:summaryOn="@string/settings_interval_vibrate_on"
			android:summaryOff="@string/settings_interval_vibrate_off"
		/>
	</PreferenceCategory>
</PreferenceScreen>