<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
	>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
		>
			<com.evancharlton.mileage.views.DividerView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/divider_fillup_info"
			/>
			<LinearLayout
				android:id="@+id/info"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
			/>
			<com.evancharlton.mileage.views.DividerView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/divider_fillup_statistics"
			/>
			<com.evancharlton.mileage.views.DividerView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/divider_fillup_fields"
			/>
		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<Button
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:id="@+id/edit"
			android:text="@string/edit"
		/>
		<Button
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:id="@+id/close"
			android:text="@string/close"
		/>
	</LinearLayout>
</LinearLayout>
