<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_weight="1"
>
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/contents"
	>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/import_export_text"
		/>
		<Button
			android:id="@+id/import_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/import_data"
		/>
		<Button
			android:id="@+id/export_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/export_data"
		/>
	</LinearLayout>
</ScrollView>