<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
	>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical"
		    android:id="@+id/container"
		>
			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/field_title"
				android:id="@+id/title"
			/>
			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/field_description"
				android:id="@+id/description"
			/>
		</LinearLayout>
	</ScrollView>
	<Button
		android:id="@+id/save_btn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/add_field"
	/>
</LinearLayout>