<?xml version="1.0" encoding="utf-8"?>
<merge
	xmlns:android="http://schemas.android.com/apk/res/android"
>
	<com.evancharlton.mileage.views.DividerView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/divider_loaded_date"
	/>
	<TextView
		android:id="@+id/raw_date"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
	/>
	<com.evancharlton.mileage.views.DividerView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/divider_date_format"
	/>
	<Spinner
		android:id="@+id/date_formats"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	/>
	<com.evancharlton.mileage.views.DividerView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/divider_parsed_date"
	/>
	<TextView
		android:id="@+id/parsed_date"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
	/>
</merge>
