<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
	>
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		>
		    <LinearLayout
		    	android:orientation="horizontal"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		    >
				<EditText
					android:id="@+id/price"
				    android:layout_width="0dip"
			   		android:layout_weight="1"
				    android:layout_height="wrap_content" 
				    android:numeric="decimal"
				/>
				<EditText
					android:id="@+id/volume"
					android:layout_width="0dip"
			   		android:layout_weight="1"
					android:layout_height="wrap_content"
				    android:numeric="decimal"
				/>
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
		    	android:gravity="center"
			>
				<EditText
					android:id="@+id/odometer"
					android:layout_width="0dip"
			   		android:layout_weight="1"
					android:layout_height="wrap_content"
					android:hint="@string/odometer"
					android:inputType="number"
					android:digits="+0123456789."
				/>
				<Button
					android:id="@+id/date"
					android:layout_width="0dip"
			   		android:layout_weight="1"
					android:layout_height="wrap_content"
				/>
			</LinearLayout>
			<Spinner
				android:id="@+id/vehicle_spinner"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
			<CheckBox
				android:id="@+id/partial"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/partial_fillup"
			/>
			<LinearLayout
				android:id="@+id/container"
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
	</ScrollView>
	<Button
		android:id="@+id/save_btn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/add_fillup"
	/>
</LinearLayout>